--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "burger",
+  "name": "Burger",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/markpython86/Burger.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/markpython86/Burger.git/issues"
+  },
+  "homepage": "https://github.com/markpython86/Burger.git#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
